kubernetes-random-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: random-namespace
  labels:
    name: random-namespace
