kubernetes-random-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: random-deployment
  namespace: random-namespace
spec:
  selector:
    matchLabels:
      run: random-deployment
  replicas: 4
  template:
    metadata:
      labels:
        run: random-deployment
    spec:
      containers:
      - name: kube-demo
        image: node-demo
        imagePullPolicy: IfNotPresent
        readinessProbe:
          httpGet:
            path: /ready
            port: liveness-port
          initialDelaySeconds: 40
          timeoutSeconds: 1
          periodSeconds: 15
        livenessProbe:
          tcpSocket:
            port: liveness-port
          initialDelaySeconds: 40
          timeoutSeconds: 1
          periodSeconds: 15
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - name: liveness-port
          containerPort: 3000
